syntax = "proto3";
package formpackage;

// requests
message StartFormRequest {
  int32 FormId = 1;
  int32 ProgressId = 2;
}

message InputValueRequest {
  int32 Index = 1;
  double NumValue = 2;
  string TextValue = 3;
}

// responses
message ValidityResponse {
  bool Valid = 1;
  string message = 2;
}

message PriceResponse {
  double Price = 1;
}

message InputResponse {
  int32 Index = 1;
  string Label = 2;
  string Placeholder = 3;
  InpType InputType = 4;
  repeated SendChoice choices = 5;
}

message InputInvalidResponse {
  int32 Index = 1;
  ErrorType Error = 2;
  double ErrorValue = 3;
  double NumValue = 4;
  string textValue = 5;
}

message InputandValueResponse {
  int32 Index = 1;
  string Label = 2;
  string Placeholder = 3;
  InpType InputType = 4;
  repeated SendChoice choices = 5;
  ErrorType Error = 6;
  double ErrorValue = 7;
  double NumValue = 8;
  string textValue = 9;
}

message SendChoice {
  int32 Id = 1;
  string Label = 2;
}

enum InpType {
    Text = 0;
		Integer = 1;
		Float = 2;
		Options = 3;
}

enum ErrorType {
  Required = 0;
  Equal = 1;
  NotEqual =2;
  GreaterThan = 3;
  LessThan = 4;
  // DigitsOnly
}