package formpackage;
syntax = "proto3";


message Request {
  int32 Id = 1;
  InpType InpType = 2;
  float Value = 3;
  string TextValue = 4;
  RequestType RequestType = 5;
}

message Response {
  int32 Id = 1;
  string Label = 2;
  string Placeholder = 3;
  InpType InpType = 4;
  ErrorType Error = 5;
  double ErrorValue = 6;
  double Value = 7;
  string TextValue = 8;
  ResponseType ResponseType = 9;
  repeated SendChoice Choices = 10;
}

message SendChoice {
  int32 Id = 1;
  string Label = 2;
}

enum InpType {
    Text = 0;
		Integer = 1;
		Float = 2;
		DateTime = 3;
		Radio = 4;
		Checkbox = 5;
		Options = 6;
}

enum RequestType {
  InputValue = 0;
  FormSubmit = 1;
}

enum ResponseType {
  InputValidity = 0;
  NewInput = 1;
  FormSubmitAccepted = 2;
  FormSubmitRejected = 3;
  Price = 4;
}

enum ErrorType {
  Required = 0;
  Equal = 1;
  NotEqual =2;
  GreaterThan = 3;
  LessThan = 4;
  NoError = 5;
} // DigitsOnly